# bootstrap-your-zuul

./: .gitreview  .zuul.yaml  README.md  Server.hs  Shakefile.hs  bootstrap-your-zuul.cabal  bsconfig.json  groups  imports.dhall  package.dhall  package.json  pnpm-lock.yaml  project.config  setup.py  tailwind.config.js  tox.ini
BootstrapYourZuul/: Playbook.dhall  Zuul.dhall  package.dhall  render.dhall
BootstrapYourZuul/Config/: Type.dhall  default.dhall  getZuulJobs.dhall  package.dhall
BootstrapYourZuul/Connection/: Type.dhall  getName.dhall  map.dhall  package.dhall
BootstrapYourZuul/Job/: base.dhall  package.dhall
BootstrapYourZuul/JsonConfig/: Connections.dhall  Type.dhall  package.dhall  toConfig.dhall
BootstrapYourZuul/Pipeline/: addSqlReporter.dhall  check.dhall  gate.dhall  package.dhall  patchsetComment.dhall  periodic.dhall  post.dhall  promote.dhall
bootstrap_your_zuul/: __init__.py  __main__.py
examples/: demo.dhall  demo.yaml
src/: Api.res  App.res  Components.res  Index.res  index.html  index.js  server.js
