cabal-version:       >=1.10
name:                bootstrap-your-zuul
version:             0.1.0.0
author:              Tristan de Cacqueray
maintainer:          tdecacqu@redhat.com
build-type:          Simple
extra-source-files:  README.md

executable bootstrap-your-zuul
  main-is:             Server.hs
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wunused-packages
  build-depends:       base >=4.14 && <4.15
                     , aeson
                     , dhall
                     , dhall-json
                     , scotty
                     , wai-middleware-static
                     , text
  default-language:    Haskell2010
